--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="yellow">#FFFF00</color>
+    <color name="light_blue">#E0F4FE</color>
+    <color name="light_gray">#EAEAEA</color>
 </resources>
