--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,14 +111,14 @@
             android:id="@+id/iv_warning"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:src="@android:drawable/stat_sys_warning"
+            android:src="@drawable/ic_warning"
             app:layout_constraintBottom_toTopOf="@id/tv_warning_title"
             app:layout_constraintDimensionRatio="W,1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
-            app:layout_constraintWidth_percent="0.3"
+            app:layout_constraintWidth_percent="0.35"
             app:tint="@color/black"
             tools:ignore="ContentDescription" />
 
@@ -126,7 +126,7 @@
             android:id="@+id/tv_warning_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:text="@string/warning_title"
             android:textColor="@color/black"
             android:textSize="36sp"
@@ -140,10 +140,11 @@
             android:id="@+id/tv_warning_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="6dp"
+            android:paddingBottom="40dp"
             android:text="@string/warning_content"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
