--- a/app/src/main/res/drawable/ic_left_arrow.xml
+++ b/app/src/main/res/drawable/ic_left_arrow.xml
@@ -8,13 +8,13 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#fff"
+      android:strokeColor="#000"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M10,18l-6,-6l6,-6"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#fff"
+      android:strokeColor="#000"
       android:strokeLineCap="round"/>
 </vector>
