--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="30dp"
-        android:src="@android:drawable/ic_delete"
+        android:src="@drawable/ic_launcher"
         app:layout_constraintBottom_toBottomOf="@id/fl_mode_basic"
         app:layout_constraintDimensionRatio="W,1:1"
         app:layout_constraintEnd_toEndOf="@id/fl_mode_basic"
